# docs/swagger/swagger.json
@@ -172,6 +172,43 @@
                     }
                 }
             }
+        },
+        "/candidate/{id}/status": {
+            "post": {
+                "description": "Update a status of candidate",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update a status of candidate",
+                "operationId": "candidate-status-update",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Candidate ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.Candidate"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -182,6 +219,15 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "position": {
+                    "type": "string"
+                },
+                "salary": {
+                    "type": "integer"
+                },
+                "status": {
                     "type": "string"
                 }
             }
